# LiDAR-Localization-100FPS

./: CMakeLists.txt  README.md  package.xml
base/: CMakeLists.txt  base.cpp  base.h  io.cpp  io.h  utils.hpp
data/lobby/map/: map_candidate.pcd  map_sam_pro.pcd
data/lobby/scan/: 100.pcd  100.pose  101.pcd  101.pose  102.pcd  102.pose  103.pcd  103.pose  104.pcd  104.pose
dataset_player/: CMakeLists.txt  play_kitti_for_mapping.cpp  play_kitti_for_relocate.cpp
extractor/: CMakeLists.txt  square.cpp  square.h
include/: for_cloud.hpp  for_desc.hpp  for_io.hpp  for_time.hpp
launch/: collect_database.launch  mapping.launch  play_kitti_for_mapping.launch  play_kitti_for_relocate.launch  relocate.launch
localizer/: CMakeLists.txt  square.cpp  square.h
map_process/: CMakeLists.txt  make_map_squares.cpp
offline_mapping/: CMakeLists.txt  collect_database.cpp  mapping.cpp
offline_mapping/linefit/: CMakeLists.txt  bin.cpp  bin.h  ground_segmentation.cpp  ground_segmentation.h  segment.cpp  segment.h
online_relocate/: CMakeLists.txt  load_map.cpp  relocate.cpp
run/: CMakeLists.txt  run_global_localization.cpp
rviz_cfg/: mapping.rviz  relocate.rviz
